# dev

./: .env  .env.local  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  certs.sh  deploy.sh  dev.service.sample  docker.sh  logs.sh
nginx/: jaemk-ssl-config.conf  jaemk.conf
src/: main.rs  service.rs
