[package]
name = "dev"
version = "0.0.0"
authors = ["James Kominick <james@kominick.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "3" }
actix-service = "1"
futures = "0.3.1"

anyhow = "1"
chrono = "0.4"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"

slog = "2.5"
slog-async = "2.5"
slog-term = "2.6"
slog-json = "2.3"
