[package]
name = "dev"
version = "0.0.0"
authors = ["James Kominick <james@kominick.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
warp = "0.3"
reqwest = "0.11"
tracing-subscriber = "0.2"
tracing = "0.1"

chrono = "0.4"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
